[project]
name = "mlu-api"
version = "0.1.0"
description = "Python bindings for Cambricon's libraries"
readme = "README.md"
authors = [
    { name = "jklincn", email = "jklincn@outlook.com" }
]
requires-python = ">=3.10"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "auditwheel>=6.3.0",
    "pybind11>=2.13.6",
    "pytest>=8.3.5",
    "scikit-build-core>=0.11.1",
]
